# newsletter

./: Cargo.toml  Dockerfile  README.md  bacon.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
coverage/html/: index.html
coverage/html/coverage/home/ayush/workspace/projects/newsletter/src/: main.rs.html
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
